Variable and Data Type Exercises

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
             "label": "C/C++: g++.exe 활성 파일 빌드",
             "command": "C:\\msys64\\ucrt64\\bin\\g++.exe",
             "args": [
-                "-std=c++14"
+                "-std=c++14",
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
